--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -37,7 +37,7 @@ jobs:
             source ~/.bashrc
 
             # Navigate to the app directory
-            cd apps/coding-ec-nextjs
+            cd apps/coding-public-nextjs
 
             # Update the codebase
             git switch master
@@ -49,11 +49,12 @@ jobs:
             npm run build
             
             # Check if PM2 knows about our app
-            if pm2 show coding-ec-nextjs > /dev/null 2>&1; then
+            if pm2 show coding-public-nextjs > /dev/null 2>&1; then
               echo "Application is registered in PM2, restarting..."
-              pm2 restart coding-ec-nextjs
+              pm2 restart coding-public-nextjs
             else
               echo "Application is not registered in PM2, starting..."
-              pm2 start npm --name "coding-ec-nextjs" -- run start
+              pm2 start npm --name "coding-public-nextjs" -- run start
+              pm2 save
             fi
           '
